# OpenJTD

./: README.ja.md  README.md  TODO.ja.md  TODO.md
.github/workflows/: deploy-viewer.yml  pr-target-guard.yml
docs/: CHARTER.ja.md  CHARTER.md  RHWP-COMPATIBILITY.ja.md  RHWP-COMPATIBILITY.md
openjtd-samples/: README.ja.md  README.md
openjtd-spec/rfc/: 0009-document-text-paragraph-record.ja.md  0009-document-text-paragraph-record.md
openjtd.github.io/: README.ja.md  README.md  wrangler.toml
rjtd/: Cargo.toml
rjtd/crates/rjtd-cli/: Cargo.toml
rjtd/crates/rjtd-cli/src/: main.rs
rjtd/crates/rjtd-cli/tests/: streams.rs
rjtd/crates/rjtd-core/src/: auto_text_info.rs  document_text.rs  font_stream.rs  layout_mark.rs  lib.rs  style_stream.rs
rjtd/crates/rjtd-export/: Cargo.toml
rjtd/crates/rjtd-export/src/: lib.rs
rjtd/crates/rjtd-model/: Cargo.toml
rjtd/crates/rjtd-model/src/: lib.rs
rjtd/crates/rjtd-testkit/: Cargo.toml
rjtd/crates/rjtd-wasm/: Cargo.toml
scripts/: regenerate-pdf-output.sh
