[package]
name = "rjtd-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rjtd"
path = "src/main.rs"

[dependencies]
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg", "png"] }
rjtd-core = { path = "../rjtd-core" }
rjtd-export = { path = "../rjtd-export" }
rjtd-model = { path = "../rjtd-model" }

[dev-dependencies]
cfb = "0.14"

[lints]
workspace = true
