[package]
name = "rjtd-export"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg", "png"] }
rjtd-core = { path = "../rjtd-core" }
rjtd-model = { path = "../rjtd-model" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pdf-writer = "0.12"
svg2pdf = "0.13"
usvg = "0.45"

[lints]
workspace = true
