[package]
name = "rjtd-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rjtd-core = { path = "../rjtd-core" }
rjtd-model = { path = "../rjtd-model", default-features = false }
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg", "png"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
] }

[lints]
workspace = true
